feat(procedure): desk fees from DB, photo capture, and dossier print
Load procedure fees from the Fee table and persist Payment_Fee line items.
Require a captured photo before payment; store and serve photos via
CandidatePhotoServlet. Add printable candidate dossier (JSP + CSS/JS).
Extend ExamRegistration with procedure-complete logic and completion timestamp.